<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="logo">ATM Logo</string>
    <string name="imgEmpresa">Imagem Empresa</string>
    <string name="imgServicos">Imagem Serviços</string>
    <string name="imgCliente">Imagem Cliente</string>
    <string name="imgContato">Imagem Contato</string>
    <string name="detlahes_empresa">Sobre a Empresa</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="websistems">Web Sistems Technology</string>
    <string name="detlahes_servicos">Serviços</string>
    <string name="consultoria">Consultoria</string>
    <string name="processos">Processos</string>
    <string name="acom_e_pro">Acompanhamento e Projetos</string>
    <string name="dot">...</string>
    <string name="detlahes_cliente">Nossos Clientes</string>
    <string name="cliente1">Cliente SYS</string>
    <string name="cliente_sys">Empresa de desenvolvimento de sistemas</string>
    <string name="cliente2">Cliente RSM</string>
    <string name="cliente_rsm">Empresa de auditoria</string>
    <string name="detlahes_contato">Contato</string>
    <string name="email">Email:</string>
    <string name="telefone">Telefone:</string>
    <string name="celular">Celular:</string>
    <string name="txtEmail">consultoria@atm.com.br</string>
    <string name="txtTelefone">(83) 3333-2222</string>
    <string name="txtCelular">(83) 9999-8888</string>
</resources>
