<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".EmpresaActivity">

    <TableLayout
        android:id="@+id/tableEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TableRow>

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/detalhe_empresa"
                android:contentDescription="@string/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detlahes_empresa"
                android:textColor="@color/empresa"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_below="@id/tableEmpresa"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/scrollFundo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lorem"
            android:textColor="@android:color/black"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </ScrollView>

</RelativeLayout>